--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-    <link rel="stylesheet" href="/public/main.css">
+    <link rel="stylesheet" href="/dist/main.css">
 
     <title>Fab's Potfolio</title>
     <meta name="description" content="Fab's Portfolio">
